trunk/Archive2/72/0576bb749e8e03/output
In file included from main.cpp:4:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/algorithm:62:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/stl_algo.h:4163:12: error: no viable overloaded '='
        *__result = __unary_op(*__first);
        ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~
main.cpp:14:14: note: in instantiation of function template specialization 'std::transform<std::istream_iterator<long, char, std::char_traits<char>, long>, std::ostream_iterator<long, char, std::char_traits<char> >, (lambda at main.cpp:17:17)>' requested here
        std::transform(
             ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/stream_iterator.h:193:7: note: candidate function not viable: no known conversion from 'const char *' to 'const long' for 1st argument; dereference the argument with *
      operator=(const _Tp& __value)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/stream_iterator.h:154:11: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'const char *' to 'const std::ostream_iterator<long, char, std::char_traits<char> >' for 1st argument
    class ostream_iterator
          ^
1 error generated.
